# Ozi

./: .gitignore  Cargo.toml  README.md  bot_config.json  entries.txt  ship_log.txt  tsu.json
src/: commands.rs  helpers.rs  main.rs
